--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -378,6 +378,10 @@ article #item-image {
   grid-row-start: 3;
   grid-row-end: 3; }
 
+article a#tag {
+  color: black;
+  text-decoration-line: underline; }
+
 article.about-me {
   grid-template-columns: 10% 80% auto;
   grid-template-rows: auto auto auto; }
