--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -494,6 +494,12 @@ article.cv #education {
 .contact__message {
   text-align: justify; }
 
+.header h1 {
+  font-size: 1em; }
+
+h3.related__title {
+  font-size: 1.5em; }
+
 .post__header {
   border-bottom: 0; }
 
